# Neural_network_HEP

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Dockerfile  Doxyfile  Makefile  README.md  format.sh
.github/workflows/: clang_format.yml  cmake_serial_tests.yml  codacy.yml  codeql.yml
benchmark/: CMakeLists.txt
benchmark/Matrix/: CMakeLists.txt  MatrixConstruction.cc  MatrixOperations.cc  RandomMatrix.hpp
data/: plot.py  training_filtered_processed.csv  training_filtered_processed_reduced.csv  training_processed.csv  training_processed_reduced.csv  training_validation_accuracy_975_300.csv  training_validation_loss_975_300.csv
data/accuracy_data/: clean.py  values_1000_1.txt  values_100_3.txt  values_100_4.txt  values_200_1.txt  values_200_2.txt  values_400_1.txt  values_400_2.txt  values_400_3.txt  values_500_2.txt  values_700_1.txt  values_700_4.txt  values_900_1.txt  values_900_4.txt
docs/html/: Activators_8hpp.html  Activators_8hpp_source.html  ErrorFunction_8hpp.html  ErrorFunction_8hpp_source.html  Layer_8hpp.html  Layer_8hpp_source.html  Matrix_8hpp.html  Matrix_8hpp_source.html  Network_8hpp.html  Network_8hpp_source.html  VectorOperations_8hpp.html  VectorOperations_8hpp_source.html  _formulas.tex  _formulas_dark.tex  annotated.html  classLayer-members.html  classLayer.html  classMatrix-members.html  classMatrix.html  classNetwork-members.html  classNetwork.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_914bc62cace20c080c90bd0a9c500880.html  dir_b9277e40c0700fd4ee3daf77dfd226c5.html  dir_ee75d340cb949c8d47b0901592a11d1b.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  index.html  menudata.js  structElu-members.html  structElu.html  structLeaky__ReLU-members.html  structLeaky__ReLU.html  structLinear-members.html  structLinear.html  (+12 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  files_1.js  files_2.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  related_0.js  searchdata.js
docs/latex/: Activators_8hpp.tex  Activators_8hpp_source.tex  ErrorFunction_8hpp.tex  ErrorFunction_8hpp_source.tex  Layer_8hpp.tex  Layer_8hpp_source.tex  Matrix_8hpp.tex  Matrix_8hpp_source.tex  Network_8hpp.tex  Network_8hpp_source.tex  VectorOperations_8hpp.tex  VectorOperations_8hpp_source.tex  annotated.tex  classLayer.tex  classMatrix.tex  classNetwork.tex  files.tex  refman.tex  structElu.tex  structLeaky__ReLU.tex  structLinear.tex  structMeanSquaredError.tex  structParametric__ReLU.tex  structSigmoid.tex  structStep.tex  structSwish.tex  structTanh.tex
example/higgs_ml/: Dockerfile
example/higgs_ml/data/: higgs_ml_full_data.csv  new_test_data.csv  new_validation_data.csv  training_data.csv
example/higgs_ml/preprocessing_scripts/: preprocessing.py
example/higgs_ml/tex/: main.tex
example/higgs_ml/training_and_validation/: Makefile  main.cc  test.cc  training_and_validation.cc
src/: Makefile  main.cc  nnhep.hpp  plot.py  preprocessing.py  run_many.sh  test.cc  training_and_validation.cc
src/cuda/DataFormats/: Matrix.h  VectorKernels.h  VectorOperations.h
src/cuda/include/: Activators.h  ErrorFunction.h  Layer.h  Network.h  Network.hpp
src/nnhep/DataFormats/: Makefile  Matrix.hpp  MatrixKernels.cpp  MatrixOperations.hpp  TBBOperations.hpp  (+4 more)
test/ActivatorsTest/: Activators.cc  Makefile
test/MatrixTest/: MatrixMultiplication.cc  MatrixSum.cc  MatrixTransposition.cc
test/NetworkTest/: AndFunction.cc  Makefile  OrFunction.cc  XorFunction.cc
test/cuda/: CMakeLists.txt
test/cuda/MatrixTest/VectorTest/: CMakeLists.txt  Makefile  VectorTest.cu
test/serial/: CMakeLists.txt
test/serial/ActivatorsTest/: Activators.cc  CMakeLists.txt
test/serial/MatrixTest/: CMakeLists.txt  Makefile  MatrixMultiplication.cc  MatrixSum.cc  MatrixTransposition.cc
tex/: Makefile  biblio.bib  main.tex
(+79 files in other folders)
